gccida/g0/fold_rtx
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3779:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3784:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3795:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3810:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3812:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3816:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v40; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3823:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3836:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v60; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3842:4: error: expected ';' after expression
rtx xa; // [rsp+8h] [rbp-228h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3842:5: error: use of undeclared identifier 'xa'
rtx xa; // [rsp+8h] [rbp-228h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3843:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_arg1; // [rsp+1Ch] [rbp-214h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3844:4: error: expected ';' after expression
rtx replacements[2]; // [rsp+20h] [rbp-210h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3844:5: error: use of undeclared identifier 'replacements'
rtx replacements[2]; // [rsp+20h] [rbp-210h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3845:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_arg0; // [rsp+3Ch] [rbp-1F4h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3846:4: error: expected ';' after expression
rtx folded_arg1; // [rsp+40h] [rbp-1F0h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3846:5: error: use of undeclared identifier 'folded_arg1'; did you mean 'mode_arg1'?
rtx folded_arg1; // [rsp+40h] [rbp-1F0h] BYREF 
    ^~~~~~~~~~~
    mode_arg1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3843:14: note: 'mode_arg1' declared here
machine_mode mode_arg1; // [rsp+1Ch] [rbp-214h] BYREF 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3847:4: error: expected ';' after expression
rtx folded_arg0; // [rsp+48h] [rbp-1E8h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3847:5: error: use of undeclared identifier 'folded_arg0'; did you mean 'mode_arg0'?
rtx folded_arg0; // [rsp+48h] [rbp-1E8h] BYREF 
    ^~~~~~~~~~~
    mode_arg0
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3845:14: note: 'mode_arg0' declared here
machine_mode mode_arg0; // [rsp+3Ch] [rbp-1F4h] BYREF 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/cse.c:3848:4: error: expected ';' after expression
rtx tem; // [rsp+50h] [rbp-1E0h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fold_rtx/src/obj/cse.o] Error 1
